--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,8 @@ author = "David Glymph <dglymph@renci.org>"
 edition = "2021"
 
 [dependencies]
+ahash = "0.8.3"
+camino = "1.1.6"
 clap = { version = "4.4.6", features = ["derive"] }
+serde = { version = "1.0.189", features = ["derive"] }
+serde_json = "1.0.107"
