--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,8 @@ jobs:
             os: macos-latest
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
+          - target: x86_64-unknown-linux-gnu:centos # libc 2.17
+            os: ubuntu-latest
           - target: x86_64-apple-darwin
             os: macos-latest
           # Universal macOS binary is supported as universal-apple-darwin.
