--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ camino = "1.1.6"
 clap = { version = "4.4.6", features = ["derive"] }
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
+
+[package.metadata.cross.target.target.x86_64-unknown-linux-gnu]
+image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
