--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 ahash = "0.8.3"
 camino = "1.1.6"
 clap = { version = "4.4.6", features = ["derive"] }
+flate2 = "1.0.28"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
 
