--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,8 @@ flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = true }
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
 
+[dev-dependencies]
+tempfile = "3.8.1"
+
 [package.metadata.cross.target.target.x86_64-unknown-linux-gnu]
 image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
